# shortcutai

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md
apps/windows/: README.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.json
apps/windows/src/: App.tsx  i18n.ts  platform.ts  styles.css
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/icons/: README.md  icon.icns
apps/windows/src-tauri/src/: main.rs
shared/core/: README.md  package.json  tsconfig.json
shared/core/src/: execution-insights.ts  index.ts  types.ts
supabase/functions/create-checkout/: index.ts
supabase/functions/stripe-webhook/: index.ts
typo/: BUILD.md
typo/typo/: AboutView.swift  ActionsView.swift  AnimatedCatLogo.swift  AppLanguage.swift  AuthManager.swift  ChatView.swift  CodeBlockView.swift  ContentView.swift  ExecutionLogStore.swift  GeneralSettingsView.swift  IconPickerView.swift  Info.plist  LoginRequiredView.swift  MarkdownView.swift  MenuBarMenuView.swift  Models.swift  OnboardingView.swift  OpenAIService.swift  PaywallView.swift  PluginProcessor.swift  PluginsView.swift  PopoverView.swift  QuickPromptView.swift  SettingsView.swift  SetupWizardView.swift  TemplatesView.swift  UpdateChecker.swift  typoApp.swift
typo/typo.app/Contents/: Info.plist
typo/typo.xcodeproj/: project.pbxproj
typo/typo/Onboarding/: ActivationStep.swift  FeaturesStep.swift  OnboardingManager.swift  OnboardingView.swift  PermissionsStep.swift  ShortcutStep.swift  WelcomeStep.swift
typo/typo/en.lproj/: Localizable.strings
(+11 files in other folders)
