[package]
name = "shortcutai-windows"
version = "0.1.0"
description = "ShortcutAI Windows desktop app"
authors = ["ShortcutAI Team"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
arboard = "3.4"
enigo = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
